<resources>
    <string name="app_name">cukcuk lite</string>
    <string name="image_description" />
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="signin">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="keep_me_sign_in">keep me sign in</string>
    <string name="register_account"><u>Register account</u></string>
    <string name="misa">MISA</string>
    <string name="username_not_allow_empty">Username not allow empty</string>
    <string name="password_not_allow_empty">Password not allow empty</string>
    <string name="account_invalidate">Account invalidate!</string>
    <string name="you_are_sign_in_success">You are sign in success</string>
    <string name="register">Đăng ký</string>
    <string name="confirm_password">confirm password</string>
    <string name="something_went_wrong">Có lỗi xảy ra không mong muốn, hãy thử lại!</string>
    <string name="account_is_exists">Account is exists, please choose others user name!</string>
    <string name="you_have_to_confirm_passwod">You have to confirm password!</string>
    <string name="confirm_password_is_incorrect">Confirm password is incorrect</string>
    <string name="take">Cất</string>
    <string name="delete">Xóa</string>
    <string name="dish_name">Tên món</string>
    <string name="enter_dish_name">Nhập tên món</string>
    <string name="price">Giá bán</string>
    <string name="price_default">0</string>
    <string name="unit">Đơn vị tính</string>
    <string name="color">Màu sắc</string>
    <string name="icon">Biểu tượng</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="done">Xong</string>
    <string name="state">Trạng thái</string>
    <string name="stop_sale">Ngừng bán</string>
    <string name="dish_name_is_exists">Tên món ăn đã có trong thực đơn!</string>
    <string name="dish_name_not_allow_empty">Tên món ăn không được để trống</string>
    <string name="cost">Giá bán:</string>
    <string name="delete_success">Xóa món ăn thành công</string>
    <string name="add_dish_success">Thêm món ăn thành công</string>
    <string name="update_dish_success">Cập nhật món ăn thành công</string>
    <string name="edit_dish">Sửa món</string>
    <string name="add_dish">Thêm món</string>
    <string name="cukcuk_like">CUKCUK LIKE</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="confirm_delete_dish">Bạn có chắc chắn muốn xóa món <![CDATA[<b>%s</b>]]> không?</string>
    <string name="confirm_delete_unit">Bạn có chắc chắn muốn xóa đơn vị <![CDATA[<b>%s</b>]]> không?</string>
    <string name="add_new_unit">Thêm đơn vị tính</string>
    <string name="edit_unit">Sửa đơn vị tính</string>
    <string name="unit_name_is_exists">Tên dơn vị đã tồn tại</string>
    <string name="unit_name_not_allow_empty">Bạn phải nhập tên đơn vị</string>
    <string name="add_unit_success">Thêm đơn vị thành công</string>
    <string name="c">C</string>
    <string name="decrease">Giảm</string>
    <string name="increase">Tăng</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_Sub">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_Sum">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sum_sub">+/-</string>
    <string name="_0">0</string>
    <string name="thousand">000</string>
    <string name="comma">,</string>
    <string name="equal_done">=</string>
    <string name="unit_name_is_used">Tên đơn vị đã được sử dụng, bạn không thể xóa</string>
    <string name="facebook_app_id">337217350241234</string>
    <string name="fb_login_protocol_scheme">fb337217350241234</string>
    <string name="skip">Bỏ qua</string>
    <string name="next">Tiếp theo</string>
    <string name="login">Đăng nhập</string>
    <string name="you_have_account">Bạn đã có tài khoản?</string>
    <string name="you_have_not_account">Bạn chưa có tài khoản</string>
    <string name="_continue">TIẾP TỤC</string>
    <string name="intro_msg_1">Ứng dụng &lt;font color=#0973b9>MIỄN PHÍ&lt;/font> để bán hàng và thống kê doanh thu dành cho các quán nhỏ và quầy di động phục vụ ăn uống.</string>
    <string name="intro_msg_2">Chọn loại quán để lấy thực đơn có sẵn hoặc tự thêm món dễ dàng.</string>
    <string name="intro_msg_3">Ghi lại nhanh các món khách đã gọi.</string>
    <string name="intro_msg_4">Thu tiền và trả tiền thừa cho khách đơn giản, chính xác.</string>
    <string name="intro_msg_5">Xem báo cáo doanh thu, báo cáo theo mặt hàng vào cuối ngày, cuối tháng…</string>
    <string name="choose_restaurant_type_title">Chọn loại quán</string>
    <string name="msg_continue">Tiếp tục</string>
    <string name="restaurant_type">Loại nhà hàng</string>
    <string name="touch_here_to_retry">Bấm vào đây để thử lại.</string>
    <string name="login_via_facebook">Đăng nhập bằng Facebook</string>
    <string name="login_via_google">Đăng nhập bằng Google</string>
    <string name="login_via_email_telephone">Số điện thoại hoặc email</string>
    <string name="login_via">Đăng nhập bằng</string>
    <string name="login_in_process">Đang đang nhập…</string>
    <string name="add">+</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sale_menu_action">Bán hàng</string>
    <string name="menu_action_menu">Thực đơn</string>
    <string name="report_menu_action">Báo cáo</string>
    <string name="submenu_title_settings">Thiết lập</string>
    <string name="nav_sync_title">Đồng bộ dữ liệu</string>
    <string name="nav_settting_title">Thiết lập</string>
    <string name="submenu_title_help">Trợ giúp</string>
    <string name="nav_notification_title">Thông báo</string>
    <string name="nav_info_title">Thông tin ứng dụng</string>
    <string name="nav_rate_title">Đánh giá ứng dụng</string>
    <string name="nav_share_title">Giới thiệu cho bạn</string>
    <string name="submenu_title_account">Tài khoản</string>
    <string name="nav_logout_title">Đăng xuất</string>
    <string name="sale">Bán hàng</string>
    <string name="menu_title">Thực đơn</string>
    <string name="init_restaurant_type">Đang khởi tạo danh sách nhà hàng…</string>
    <string name="delete_unit">Xóa đơn vị tính</string>
    <string name="init_dish_list">Khởi tạo danh sách món ăn…</string>
    <string name="delete_unit_success">Xóa đơn vị thành công</string>
    <string name="no_customers_oder_yet">Chưa có khách gọi món</string>
    <string name="click_here_or_add_to_oder">Bấm vào đây hoặc dấu + để gọi món</string>
    <string name="no_dish_in_menu_yet">Chưa có món nào trong thực đơn</string>
    <string name="click_here_or_add_to_add_dish">Bấm vào đây hoặc dấu + để thêm món</string>
    <string name="you_have_not_dish_in_menu">Bạn chưa có món nào trong thực đơn</string>
    <string name="please_go_to_menu_add_dish">Vui lòng vào thực đơn để thêm món</string>
    <string name="go_to_menu">VÀO THỰC ĐƠN</string>
    <string name="pay">Thu tiền</string>
    <string name="total_money">Tổng tiền</string>
    <string name="money_default">0</string>
    <string name="choose_dish">Chọn món</string>
    <string name="cancel_short">Hủy</string>
    <string name="you_have_not_select_dish_yet">Bạn chưa chọn món ăn nào!</string>
    <string name="confirm_delete_order">Bạn có muốn hủy Order này không?</string>
    <string name="dish_is_using">Món ăn của bạn đã được sử dụng trong hóa đơn, không thể xóa!</string>
    <string name="bill">HÓA ĐƠN</string>
    <string name="num">Số:</string>
    <string name="date">Ngày: </string>
    <string name="good_name">Hàng hóa</string>
    <string name="quatity">SL</string>
    <string name="unit_price">Đơn giá</string>
    <string name="into_money">Thành tiền</string>
    <string name="the_money_have_to_pay">Số tiền phải trả</string>
    <string name="guest_pay">Tiền khách đưa</string>
    <string name="money_returned_to_guest">Tiền trả lại cho khách</string>
    <string name="the_amount_of_guest_money_must_not_be_less_than_the_amount_payable">số tiền khách đưa không được nhỏ hơn số tiền phải trả</string>
    <string name="pay_success">Đã thu tiền thành công, vui lòng chọn món mới</string>
    <string name="time">Thời gian</string>
    <string name="vertical_label_chart">(Nghìn đồng)</string>
    <string name="horizon_label_chart">(Ngày)</string>
    <string name="title_dialog_pick_time">Thời gian</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="ok">Đồng ý</string>
    <string name="param_report_current">Gần đây</string>
    <string name="param_report_last_month">Tháng trước</string>
    <string name="param_report_last_week">Tuần trước</string>
    <string name="param_report_last_year">Năm trước</string>
    <string name="param_report_other">Khác</string>
    <string name="param_report_this_month">Tháng này</string>
    <string name="param_report_this_week">Tuần này</string>
    <string name="param_report_this_year">Năm nay</string>
    <string name="param_report_today">Hôm nay</string>
    <string name="param_report_yesterday">Hôm qua</string>
    <string name="report_sale_inventoryitem_title">Doanh thu theo mặt hàng</string>
    <string name="msg_empty_report">Báo cáo doanh thu không có số liệu</string>
    <string name="totalRevenue">Tổng doanh thu</string>
    <string name="msg_dialog_pick_date">Giá trị Từ ngày phải nhỏ hơn hoặc bằng Đến ngày</string>
    <string name="icon_fragment">icon_fragment</string>
    <string name="evenue">Doanh thu</string>
    <string name="keyClear">C</string>
    <string name="title_table">Nhập số bàn</string>
    <string name="title_person">Nhập số người</string>
    <string name="title_quantiy">Nhập số lượng</string>
    <string name="month">Tháng</string>
    <string name="day">Ngày</string>
    <string name="day_of_week">Thứ</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="device_currently_has_no_network_available">Thiết bị hiện tại không có kết nối mạng, xin vui lòng thử lại</string>
    <string-array name="color_list">
        <item>"#26C6DA"</item>
        <item>"#0097A7"</item>
        <item>"#0D47A1"</item>
        <item>"#1565C0"</item>
        <item>"#039BE5"</item>
        <item>"#64B5F6"</item>
        <item>"#FF6F00"</item>
        <item>"#FFA000"</item>
        <item>"#FFB300"</item>
        <item>"#CF9A0A"</item>
        <item>"#8D6E63"</item>
        <item>"#6D4C41"</item>
        <item>"#D32F2F"</item>
        <item>"#FF1744"</item>
        <item>"#F44336"</item>
        <item>"#EC407A"</item>
        <item>"#AD1457"</item>
        <item>"#6A1B9A"</item>
        <item>"#AB47BC"</item>
        <item>"#BA68C8"</item>
        <item>"#00695C"</item>
        <item>"#00897B"</item>
        <item>"#4DB6AC"</item>
        <item>"#2E7D32"</item>
        <item>"#43A047"</item>
        <item>"#64DD17"</item>
        <item>"#212121"</item>
        <item>"#5F7C8A"</item>
        <item>"#B0BEC5"</item>
        <item>"#455A64"</item>
        <item>"#607D8B"</item>
        <item>"#90A4AE"</item>
    </string-array>
</resources>