<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navSale"
            android:icon="@drawable/ic_sale"
            android:title="@string/sale_menu_action" />
        <item
            android:id="@+id/navMenu"
            android:icon="@drawable/ic_menu_image"
            android:title="@string/menu_action_menu" />
        <item
            android:id="@+id/navReport"
            android:icon="@drawable/ic_chart"
            android:title="@string/report_menu_action" />
    </group>

    <item android:title="@string/submenu_title_settings">
        <menu>
            <item
                android:id="@+id/navSync"
                android:icon="@drawable/ic_sync"
                android:title="@string/nav_sync_title" />
            <item
                android:id="@+id/navSettings"
                android:icon="@drawable/ic_settings_gray"
                android:title="@string/nav_settting_title" />
        </menu>
    </item>

    <item android:title="@string/submenu_title_help">
        <menu>
            <item
                android:id="@+id/navNotification"
                android:icon="@drawable/ic_notifications_gray_24dp"
                android:title="@string/nav_notification_title" />

            <item
                android:id="@+id/navShare"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share_title" />

            <item
                android:id="@+id/navRate"
                android:icon="@drawable/ic_rate"
                android:title="@string/nav_rate_title" />

            <item
                android:id="@+id/navInfo"
                android:icon="@drawable/ic_info_gray_24dp"
                android:title="@string/nav_info_title" />
        </menu>
    </item>
    <item android:title="@string/submenu_title_account">
        <menu>
            <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout_title" />
        </menu>
    </item>
</menu>