<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_micro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_micro"
        android:weightSum="@integer/weight_sum_bill">

        <TextView
            android:id="@+id/tvDishName"
            style="@style/TextViewNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/good_name" />

        <TextView
            android:id="@+id/tvQuantity"
            style="@style/TextViewNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/quatity" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/TextViewNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/unit_price" />

        <TextView
            android:id="@+id/tvTotalMoney"
            style="@style/TextViewNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/into_money"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/diliver_height"
        android:layout_marginTop="@dimen/padding_micro"
        android:background="@color/colorDarkGray" />
</LinearLayout>