<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_dish"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/padding_small">

    <ImageButton
        android:id="@+id/btnDish"
        android:layout_width="@dimen/dish_image_width"
        android:layout_height="@dimen/dish_image_height"
        android:background="@drawable/background_dish_icon"
        android:clickable="false"
        android:contentDescription="@string/image_description"
        android:padding="@dimen/padding_micro"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDishName"
        style="@style/TextViewNormal"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btnDish"
        app:layout_constraintRight_toLeftOf="@id/ivEnter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPriceTitle"
        style="@style/TextViewSmallGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvDishName"
        app:layout_constraintTop_toBottomOf="@id/tvDishName" />

    <TextView
        android:id="@+id/tvPrice"
        style="@style/TextViewSmallGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvPriceTitle"
        app:layout_constraintRight_toLeftOf="@id/tvState"
        app:layout_constraintTop_toBottomOf="@id/tvDishName" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@drawable/background_stop_sale"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:text="@string/stop_sale"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/tvPrice"
        app:layout_constraintTop_toTopOf="@id/tvPriceTitle" />

    <ImageView
        android:id="@+id/ivEnter"
        android:layout_width="40dp"
        android:padding="@dimen/padding_micro"
        android:layout_height="@dimen/item_dish_height"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_enter" />
</android.support.constraint.ConstraintLayout>